[tool.poetry]
name = "rogue-artificer"
version = "0.1.0"
description = ""
authors = ["Arlo J Purcell <arlo@decodable.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tcod = "^16.2.2"
freetype-py = "^2.4.0"

[tool.poetry.scripts]
game = "rogue_artificer.main:main"
ttf = "rogue_artificer.ttf:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
